# uRWellTestProto

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README  README.md  uRWellLib.pc.in
AnaCodes/: AnaClustering.cc  CMakeLists.txt  CheckDecoding.cc  DrawHVDependencePlots.cc  DrawPedestals.cc  DrawPlotsWithClustering.cc  SkimZeroSuppression.cc
Latex/: uRwellPlots1.tex
cmake_modules/: FindLZ4.cmake
hipo/hipo4/: CMakeLists.txt
include/: uRwellTools.h
src/: uRwellTools.cc
